# libh9

./: .clang-format  .gitignore  CMakeLists.txt  HALL.syx  README.md  h9.c  h9.h  h9_max_external.c  h9_modules.h  main.c  midi_parser.c  midi_parser.h  test1.syx  utils.c  utils.h
.github/workflows/: main.yml
examples/cmd/: main.c  main.h
examples/max-external/: h9_external.c
h9.xcodeproj/: project.pbxproj
h9.xcodeproj/project.xcworkspace/xcuserdata/studiodc.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
h9.xcodeproj/project.xcworkspace/xcuserdata/studiodc.xcuserdatad/xcdebugger/: Expressions.xcexplist
h9.xcodeproj/xcshareddata/xcschemes/: h9_gtest.xcscheme  h9_test.xcscheme  h9cmd.xcscheme  max-h9-external.xcscheme
h9.xcodeproj/xcuserdata/studiodc.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
h9.xcodeproj/xcuserdata/studiodc.xcuserdatad/xcschemes/: xcschememanagement.plist
h9_gtest/: main.cpp
lib/: debug.h  h9.c  h9.h  h9_module.h  h9_modules.h  h9_sysex.c  h9_sysex.h  libh9.c  libh9.h  midi_parser.c  midi_parser.h  utils.c  utils.h
libh9.xcodeproj/: project.pbxproj
libh9.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libh9.xcodeproj/project.xcworkspace/xcuserdata/studiodc.xcuserdatad/: UserInterfaceState.xcuserstate
libh9.xcodeproj/xcshareddata/xcschemes/: h9_gtest.xcscheme
libh9.xcodeproj/xcuserdata/studiodc.xcuserdatad/xcschemes/: xcschememanagement.plist
test/: h9_controls_test.cpp  h9_midi_test.cpp  h9_preset_test.cpp  h9_sysex_test.cpp  test_helpers.cpp  test_helpers.hpp  utils_test.cpp
test_data/: 1985 DAMAGE.syx  Device_Config1.syx  Device_Config2.syx  Device_Config3.syx  H9 Algorithms.csv  HRMDLO.syx  MODECHOVERB.syx  RESONATOR.syx
utils/: itohex.c
